# python-activerecord

./: .codecov.yml  .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  TESTING.md  TESTSUITES.md  build_script.py  codex.md  ecommerce_comprehensive_example.py  hatch_build.py  opencode.json  pyproject.toml  requirements-3.14.txt  requirements-3.8.txt  requirements-dev-3.8.txt  requirements-dev.txt  requirements.txt  set_operation_enhanced.py  set_operation_examples_complete.py  setup.py  temp_tests_original_files.txt  test_advanced_grouping_bridge.py  test_db_1759310553_984549c1_file_1b70d7fd.sqlite  test_fixture_sharing.py  verify_capability_markers.py  verify_correct_usage.py
.claude/: backend_development.md  code_style.md  experimental.md  feature_points.md  field-proxy-comprehensive-guide.md  math_notation.md  query_refactor_plan.md  testing.md  version_control.md
.claude/commands/: gen-relation.md
.claude/plans/: worker-pool-pipe-architecture.md
.claude/skills/activerecord-pattern/: SKILL.md
.claude/skills/backend-development/: SKILL.md
.claude/skills/dev-backend-development/: SKILL.md
.claude/skills/dev-expression-dialect/: SKILL.md
.claude/skills/dev-protocol-design/: SKILL.md
.claude/skills/dev-sync-async-parity/: SKILL.md
.claude/skills/dev-testing-contributor/: SKILL.md
.claude/skills/expression-dialect/: SKILL.md
.claude/skills/sync-async-parity/: SKILL.md
.claude/skills/testing-guide/: SKILL.md
.claude/skills/user-activerecord-pattern/: SKILL.md
.claude/skills/user-enterprise-features/: SKILL.md
.claude/skills/user-getting-started/: SKILL.md
.claude/skills/user-modeling-guide/: SKILL.md
.claude/skills/user-performance-tuning/: SKILL.md
.claude/skills/user-query-advanced/: SKILL.md
.claude/skills/user-relationships/: SKILL.md
.claude/skills/user-testing-guide/: SKILL.md
.claude/skills/user-troubleshooting/: SKILL.md
.gemini/: add_new_testcase.md  architecture.md  backend_development.md  code_style.md  testing.md  version_control.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_template.md  feature_template.md  release_hotfix_template.md
.github/pull_request_template/: bugfix_template.md  feature_template.md  release_hotfix_template.md
.github/workflows/: actions.yml  changelog-check.yml  publish.yml  sync-docs-to-main.yml  test.yml
.opencode/: context.md  discovery.yml  hints.yml  project.yml  startup.sh
.opencode/commands/: check-sync-async.md  lint-fix.md  lint.md  new-backend.md  new-feature.md  script-dev.md  script-lessons.md  test.md  test:feature.md  type-check.md
.opencode/templates/: new_backend.py  new_config.py  new_dialect.py  new_field.py  new_mixin.py  new_test.py  new_type_adapter.py
changelog.d/: 17.added.md  17.changed.md  1774757977.changed.md  20.added.md  22.added.md  25.changed.md  26.added.md  27.added.md  28.added.md  31.added.md  33.added.md  36.added.md  39.feat.md  40.changed.md  43.added.md  44.fix.md  45.fixed.md  48.added.md  49.added.md  52.added.md  55.changed.md  56.added.md  57.added.md  58.added.md  59.added.md  60.added.md  63.added.md  64.added.md  65.added.md  68.added.md  68.removed.md  69.fixed.md  70.added.md  71.added.md  71.removed.md  72.added.md  73.added.md  76.added.md  79.added.md  79.changed.md  (+7 more)
docs/: .gitbook.yaml  AI_GUIDE.md  LANGS.md  LLM_CONTEXT.md  README.md
docs/en_US/: README.md  SUMMARY.md  advanced_features.md  basic_usage.md  getting_started.md  model_definition.md  querying.md  relationships.md
docs/en_US/0.getting_started/: index.md  installation.md  quickstart.md  requirements.md
docs/en_US/1.core/: basic_operations.md  custom_fields.md  field_mixins.md  field_validation.md  fields.md  index.md  models.md  querying.md  relationships.md
docs/en_US/1.introduction/: .gitignore  README.md  aggregation.md  async-support.md  code-comparison.md  community.md  component_structure.md  conclusion.md  features.md  introduction.md  learning-curve.md  performance.md  philosophy.md  pydantic-integration.md  pydantic_graphql_advanced_demo.py  pydantic_graphql_demo.py  pydantic_integration_demo.py  relationships.md  when-to-choose.md
docs/en_US/11.contributing/: README.md  bug_fixes.md  development_process.md  documentation_contributions.md  ideas_and_feature_requests.md  sponsorship.md
docs/en_US/2.features/: error_handling.md  index.md  transactions.md
docs/en_US/2.quick_start/: README.md  basic_configuration.md  faq.md  first_model_example.md  installation.md
docs/en_US/3.active_record_and_active_query/: README.md
docs/en_US/3.backends/: README.md  architecture.md  custom_backend.md  sqlite_impl.md  sqlite_usage.md
docs/en_US/4.performance_optimization/: README.md  batch_operation_best_practices.md  caching_strategies.md  large_dataset_handling.md  performance_analysis_and_monitoring.md  query_optimization_techniques.md
docs/en_US/4.testing/: README.md  model_testing.md  performance_testing.md  unit_testing.md
docs/en_US/5.backend_configuration/: README.md
docs/en_US/5.performance/: index.md  memory_management.md  query_optimization.md
docs/en_US/6.practices/: error_handling.md  index.md  model_design.md  performance_optimization.md  query_writing.md  testing_strategy.md  transaction_usage.md
docs/en_US/6.testing_and_debugging/: README.md  debugging_techniques.md  debugging_techniques_improved.md  logging_and_analysis.md  performance_profiling_tools.md
docs/en_US/7.troubleshooting/: README.md  common_issues.md  debugging_guide.md  error_resolution.md  performance_problem.md
docs/en_US/8.security_considerations/: README.md  (+3 more)
docs/zh_CN/: README.md  SUMMARY.md
scripts/: build_hooks.py  verify_ddl_documentation.py
src/rhosocial/: .gitignore  __init__.py  activerecord_test
tests/: README.md  conftest.py
tests/providers/: basic.py  basic_connection.py  events.py  mixins.py  query.py  query_connection.py  query_worker_tasks.py  registry.py  relation.py  scenarios.py  worker_tasks.py
tests/rhosocial/: __init__.py
(+1620 files in other folders)
