# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhosocial_activerecord"
dynamic = ["version"]
description = "A modern, Pythonic implementation of the ActiveRecord pattern, providing an elegant and intuitive interface for database operations with type safety and rich features."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "vistart", email = "i@vistart.me" }
]
keywords = ["activerecord", "orm", "database", "pydantic", "relation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.10.6; python_version == '3.8'",
    "pydantic-core>=2.27.2; python_version == '3.8'",
    "pydantic>=2.11.1; python_version >= '3.9'",
    "pydantic-core>=2.33.0; python_version >= '3.9'",
    "typing-extensions>=4.12.0",
    "pytz>=2025.2",
    "python-dateutil>=2.9.0",
    "tzlocal>=5.2",
]

[project.optional-dependencies]
# Database backend dependencies (provided by separate packages)
mysql = ["rhosocial-activerecord-mysql>=1.0.0,<2.0.0"]
mariadb = ["rhosocial-activerecord-mariadb>=1.0.0,<2.0.0"]
pgsql = ["rhosocial-activerecord-pgsql>=1.0.0,<2.0.0"]
oracle = ["rhosocial-activerecord-oracle>=1.0.0,<2.0.0"]
mssql = ["rhosocial-activerecord-mssql>=1.0.0,<2.0.0"]
databases = [
    "rhosocial-activerecord-mysql>=1.0.0,<2.0.0",
    "rhosocial-activerecord-mariadb>=1.0.0,<2.0.0",
    "rhosocial-activerecord-pgsql>=1.0.0,<2.0.0",
    "rhosocial-activerecord-oracle>=1.0.0,<2.0.0",
    "rhosocial-activerecord-mssql>=1.0.0,<2.0.0",
]
migration = ["rhosocial-activerecord-migration>=1.0.0,<2.0.0"]
all = [
    "rhosocial-activerecord-mysql>=1.0.0,<2.0.0",
    "rhosocial-activerecord-mariadb>=1.0.0,<2.0.0",
    "rhosocial-activerecord-pgsql>=1.0.0,<2.0.0",
    "rhosocial-activerecord-oracle>=1.0.0,<2.0.0",
    "rhosocial-activerecord-mssql>=1.0.0,<2.0.0",
    "rhosocial-activerecord-migration>=1.0.0,<2.0.0",
]

# Development dependencies - These will be installed automatically during pip install -e .
test = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/rhosocial/python-activerecord"
Documentation = "https://docs.python-activerecord.dev.rho.social/"
Repository = "https://github.com/rhosocial/python-activerecord.git"
Issues = "https://github.com/rhosocial/python-activerecord/issues"

[tool.hatch.version]
path = "src/rhosocial/activerecord/__init__.py"
pattern = '^__version__\s*=\s*"(?P<version>(?:[1-9]\d*!)?\d+(?:\.\d+)*(?:[-._]?(?:a|alpha|b|beta|rc|pre|preview)(?:[-._]?\d+)?)?(?:\.post(?:0|[1-9]\d*))?(?:\.dev(?:0|[1-9]\d*))?(?:\+[a-z0-9]+(?:[._-][a-z0-9]+)*)?)"$'

# Build configuration
[tool.hatch.build]
include = [
    "src/rhosocial/**/*.py",
    "src/rhosocial/**/*.pyi",
    "LICENSE",
    "README.md",
]
exclude = [
    # Python cache and compiled files
    "*.pyc",
    "**/__pycache__",
    "**/*.py[cod]",
    "**/*.so",

    # System files
    "**/.DS_Store",
    "**/.*.swp",
    ".git*",

    # Test database files
    "**/*test_db.sqlite",
    "**/*test_*.sqlite",
    "**/*test_*.db",

    # Build artifacts
    "build/",
    "dist/",
    "*.egg-info/",

    # IDE and editor configuration
    ".idea/",
    ".vscode/",
    ".mypy_cache/",
    ".ruff_cache/",
    ".pytest_cache/",

    # Coverage reports
    ".coverage",
    "htmlcov/",
]

# Standard wheel build configuration (production environment)
[tool.hatch.build.targets.wheel]
packages = ["src/rhosocial"]

# Production environment excludes development files
exclude = [
    "tests/",
    "docs/",
    "examples/",
    "scripts/",

    # Database backend implementations (provided by independent packages)
    "src/rhosocial/activerecord/backend/impl/mysql",
    "src/rhosocial/activerecord/backend/impl/pgsql",
    "src/rhosocial/activerecord/backend/impl/mariadb",
    "src/rhosocial/activerecord/backend/impl/mssql",
    "src/rhosocial/activerecord/backend/impl/oracle",

    # Test packages (not needed in production environment)
    "src/rhosocial/activerecord_test",
]

# Source code distribution package configuration
[tool.hatch.build.targets.sdist]
include = [
    "src/rhosocial/**/*.py",
    "src/rhosocial/**/*.pyi",
    "tests/",
    "docs/",
    "examples/",
    "scripts/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

# Editable build hooks for the installation
[tool.hatch.build.hooks.custom]
path = "scripts/build_hooks.py"
dependencies = []

# Default environment configuration (used for pip install -e .)
[tool.hatch.envs.default]
# Edit mode includes all development dependencies by default
dependencies = [
    # Test dependencies
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",

    # Development tools
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",

    # Documentation tools
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
]

# Default environment scripts
[tool.hatch.envs.default.scripts]
# Development environment setup
setup = "python scripts/build_hooks.py"

# Code formatting
format = ["black src tests", "isort src tests"]

# Code linting
lint = ["ruff check src tests", "mypy src"]

# Testing
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

# Documentation
docs-build = "sphinx-build -b html docs docs/_build/html"
docs-serve = "python -m http.server 8000 --directory docs/_build/html"

# Complete check
all = ["format", "lint", "test"]

# Dedicated test environment
[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

# Dedicated documentation environment
[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html"
serve = "python -m http.server 8000 --directory docs/_build/html"

# Tool configurations
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["rhosocial"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true